
SUBDIRS = vki

incincdir = $(includedir)/valgrind

incinc_HEADERS = \
	pub_tool_basics.h 		\
	pub_tool_basics_asm.h 		\
	pub_tool_aspacemgr.h 		\
	pub_tool_clientstate.h		\
	pub_tool_clreq.h		\
	pub_tool_cpuid.h 		\
	pub_tool_debuginfo.h 		\
	pub_tool_errormgr.h 		\
	pub_tool_execontext.h 		\
	pub_tool_hashtable.h 		\
	pub_tool_libcbase.h 		\
	pub_tool_libcassert.h 		\
	pub_tool_libcfile.h 		\
	pub_tool_libcprint.h 		\
	pub_tool_libcproc.h 		\
	pub_tool_libcsignal.h 		\
	pub_tool_machine.h 		\
	pub_tool_mallocfree.h 		\
	pub_tool_options.h 		\
	pub_tool_oset.h 		\
	pub_tool_redir.h		\
	pub_tool_replacemalloc.h	\
	pub_tool_signals.h 		\
	pub_tool_stacktrace.h 		\
	pub_tool_threadstate.h 		\
	pub_tool_tooliface.h 		\
	pub_tool_vki.h			\
	pub_tool_vkiscnums.h		\
	pub_tool_xarray.h		\
	valgrind.h
