
# The "nobase" means that the vki/ path on some of them will be preserved
# when they are installed into $(includedir)/valgrind.
nobase_pkginclude_HEADERS = \
	pub_tool_basics.h 		\
	pub_tool_basics_asm.h 		\
	pub_tool_aspacehl.h 		\
	pub_tool_aspacemgr.h 		\
	pub_tool_clientstate.h		\
	pub_tool_clreq.h		\
	pub_tool_cpuid.h 		\
	pub_tool_debuginfo.h 		\
	pub_tool_errormgr.h 		\
	pub_tool_execontext.h 		\
	pub_tool_hashtable.h 		\
	pub_tool_libcbase.h 		\
	pub_tool_libcassert.h 		\
	pub_tool_libcfile.h 		\
	pub_tool_libcprint.h 		\
	pub_tool_libcproc.h 		\
	pub_tool_libcsignal.h 		\
	pub_tool_machine.h 		\
	pub_tool_mallocfree.h 		\
	pub_tool_options.h 		\
	pub_tool_oset.h 		\
	pub_tool_redir.h		\
	pub_tool_replacemalloc.h	\
	pub_tool_seqmatch.h		\
	pub_tool_signals.h 		\
	pub_tool_sparsewa.h		\
	pub_tool_stacktrace.h 		\
	pub_tool_threadstate.h 		\
	pub_tool_tooliface.h 		\
	pub_tool_vki.h			\
	pub_tool_vkiscnums.h		\
	pub_tool_vkiscnums_asm.h	\
	pub_tool_wordfm.h		\
	pub_tool_xarray.h		\
	valgrind.h			\
	vki/vki-linux.h			\
	vki/vki-darwin.h		\
	vki/vki-posixtypes-amd64-linux.h \
	vki/vki-posixtypes-ppc32-linux.h \
	vki/vki-posixtypes-ppc64-linux.h \
	vki/vki-posixtypes-x86-linux.h	 \
	vki/vki-posixtypes-arm-linux.h	 \
	vki/vki-amd64-linux.h		\
	vki/vki-ppc32-linux.h		\
	vki/vki-ppc64-linux.h		\
	vki/vki-x86-linux.h		\
	vki/vki-arm-linux.h		\
	vki/vki-scnums-amd64-linux.h	\
	vki/vki-scnums-ppc32-linux.h	\
	vki/vki-scnums-ppc64-linux.h	\
	vki/vki-scnums-x86-linux.h	\
	vki/vki-scnums-arm-linux.h	\
	vki/vki-scnums-darwin.h

noinst_HEADERS = \
	vki/vki-ppc32-aix5.h		\
	vki/vki-ppc64-aix5.h		\
	vki/vki-scnums-aix5.h

