
# The "nobase" means that the vki/ path on some of them will be preserved
# when they are installed into $(includedir)/valgrind.
nobase_pkginclude_HEADERS = \
	pub_tool_basics.h 		\
	pub_tool_basics_asm.h 		\
	pub_tool_addrinfo.h 		\
	pub_tool_aspacehl.h 		\
	pub_tool_aspacemgr.h 		\
	pub_tool_clientstate.h		\
	pub_tool_clreq.h		\
	pub_tool_deduppoolalloc.h	\
	pub_tool_debuginfo.h 		\
	pub_tool_errormgr.h 		\
	pub_tool_execontext.h 		\
	pub_tool_gdbserver.h 		\
	pub_tool_guest.h 		\
	pub_tool_poolalloc.h 		\
	pub_tool_hashtable.h 		\
	pub_tool_libcbase.h 		\
	pub_tool_libcassert.h 		\
	pub_tool_libcfile.h 		\
	pub_tool_libcprint.h 		\
	pub_tool_libcproc.h 		\
	pub_tool_libcsetjmp.h 		\
	pub_tool_libcsignal.h 		\
	pub_tool_machine.h 		\
	pub_tool_mallocfree.h 		\
	pub_tool_options.h 		\
	pub_tool_oset.h 		\
	pub_tool_rangemap.h		\
	pub_tool_redir.h		\
	pub_tool_replacemalloc.h	\
	pub_tool_seqmatch.h		\
	pub_tool_signals.h 		\
	pub_tool_sparsewa.h		\
	pub_tool_stacktrace.h 		\
	pub_tool_threadstate.h 		\
	pub_tool_tooliface.h 		\
	pub_tool_transtab.h 		\
	pub_tool_vki.h			\
	pub_tool_vkiscnums.h		\
	pub_tool_vkiscnums_asm.h	\
	pub_tool_wordfm.h		\
	pub_tool_xarray.h		\
	pub_tool_xtree.h		\
	pub_tool_xtmemory.h		\
	valgrind.h			\
	vki/vki-linux.h			\
	vki/vki-freebsd.h		\
	vki/vki-darwin.h		\
	vki/vki-solaris.h		\
	vki/vki-solaris-repcache.h	\
	vki/vki-machine-types-amd64-freebsd.h	\
	vki/vki-machine-types-arm64-freebsd.h	\
	vki/vki-machine-types-x86-freebsd.h	\
	vki/vki-posixtypes-amd64-linux.h \
	vki/vki-posixtypes-arm64-linux.h \
	vki/vki-posixtypes-ppc32-linux.h \
	vki/vki-posixtypes-ppc64-linux.h \
	vki/vki-posixtypes-x86-linux.h	 \
	vki/vki-posixtypes-arm-linux.h	 \
	vki/vki-posixtypes-s390x-linux.h \
	vki/vki-posixtypes-mips32-linux.h \
	vki/vki-posixtypes-mips64-linux.h \
	vki/vki-posixtypes-nanomips-linux.h \
	vki/vki-amd64-linux.h		\
	vki/vki-arm64-linux.h		\
	vki/vki-ppc32-linux.h		\
	vki/vki-ppc64-linux.h		\
	vki/vki-x86-linux.h		\
	vki/vki-amd64-freebsd.h		\
	vki/vki-arm64-freebsd.h		\
	vki/vki-x86-freebsd.h		\
	vki/vki-arm-linux.h		\
	vki/vki-s390x-linux.h		\
	vki/vki-mips32-linux.h		\
	vki/vki-mips64-linux.h		\
	vki/vki-nanomips-linux.h	\
	vki/vki-scnums-amd64-linux.h	\
	vki/vki-scnums-arm64-linux.h	\
	vki/vki-scnums-ppc32-linux.h	\
	vki/vki-scnums-ppc64-linux.h	\
	vki/vki-scnums-x86-linux.h	\
	vki/vki-scnums-freebsd.h	\
	vki/vki-scnums-arm-linux.h	\
	vki/vki-scnums-s390x-linux.h	\
	vki/vki-scnums-mips32-linux.h	\
	vki/vki-scnums-mips64-linux.h	\
	vki/vki-scnums-nanomips-linux.h	\
	vki/vki-scnums-darwin.h         \
	vki/vki-scnums-solaris.h	\
	vki/vki-scnums-shared-linux.h	\
	vki/vki-scnums-32bit-linux.h	\
	vki/vki-xen.h                   \
	vki/vki-xen-domctl.h		\
	vki/vki-xen-evtchn.h		\
	vki/vki-xen-gnttab.h		\
	vki/vki-xen-hvm.h		\
	vki/vki-xen-memory.h		\
	vki/vki-xen-mmuext.h		\
	vki/vki-xen-physdev.h		\
	vki/vki-xen-schedop.h		\
	vki/vki-xen-sysctl.h		\
	vki/vki-xen-tmem.h		\
	vki/vki-xen-version.h		\
	vki/vki-xen-xsm.h		\
	vki/vki-xen-x86.h		\
	vki/vki-linux-drm.h		\
	vki/vki-linux-io_uring.h	\
	vki/vki-linux-landlock.h
